--- a/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18NTest_pa_Arab.gwt.xml
+++ b/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18NTest_pa_Arab.gwt.xml
@@ -14,10 +14,10 @@
 
 <module>
 	<!-- Inherit the JUnit support -->
-	<inherits name='com.google.gwt.junit.JUnit'/>
+	<!--<inherits name='com.google.gwt.junit.JUnit'/>-->
 	<inherits name="com.progressoft.brix.domino.i18n.I18n"/>
 	<!-- Include client-side source for the test cases -->
 	<source path="client"/>
-	<extend-property name="locale" values="pa_Arab"/>
-	<set-property name="locale" value="pa_Arab"/>
+	<extend-property name="locale.new" values="pa_Arab"/>
+	<set-property name="locale.new" value="pa_Arab"/>
 </module>
