--- a/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18N2Test.gwt.xml
+++ b/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18N2Test.gwt.xml
@@ -14,6 +14,6 @@
 
 <module>
 	<inherits name="com.progressoft.brix.domino.i18n.I18n"/>
-	<extend-property name = "locale" values ="piglatin,piglatin_UK, piglatin_UK_WINDOWS,aa,bb,bb_CC,bb_CC_DDDDD"/>
-	<set-property name="locale" value="bb_CC_DDDDD" />
+	<extend-property name = "locale.new" values ="piglatin,piglatin_UK,piglatin_UK_WINDOWS,aa,bb,bb_CC,bb_CC_DDDDD"/>
+	<set-property name="locale.new" value="bb_CC_DDDDD" />
  </module>
