--- a/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18NTest_nb.gwt.xml
+++ b/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18NTest_nb.gwt.xml
@@ -14,10 +14,10 @@
 
 <module>
 	<!-- Inherit the JUnit support -->
-	<inherits name='com.google.gwt.junit.JUnit'/>
+	<!--<inherits name='com.google.gwt.junit.JUnit'/>-->
 	<inherits name="com.progressoft.brix.domino.i18n.I18n"/>
 	<!-- Include client-side source for the test cases -->
 	<source path="client"/>
-	<extend-property name="locale" values="nb"/>
-	<set-property name = "locale" value = "nb"/>
+	<extend-property name="locale.new" values="nb"/>
+	<set-property name = "locale.new" value = "nb"/>
 </module>
