--- a/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18NTest_shared.gwt.xml
+++ b/gwt-i18n-client/src/test/java/com/progressoft/brix/domino/i18n/I18NTest_shared.gwt.xml
@@ -13,7 +13,7 @@
 <!-- limitations under the License.                                         -->
 
 <module>
-  <inherits name='com.google.gwt.junit.JUnit'/>
+  <!--<inherits name='com.google.gwt.junit.JUnit'/>-->
   <inherits name="com.progressoft.brix.domino.i18n.I18n"/>
   <source path="shared" />
 </module>
